--- a/Blog42/Views/Home/Index.cshtml
+++ b/Blog42/Views/Home/Index.cshtml
@@ -26,12 +26,14 @@ else // Se encontrou postagem, lista-as
                 </span>
                 <span class="subtitle">
                     <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                    @post.CreatedAt.ToString("dd/MM/yyyy")
+                    @post.CreatedAt.ToString("dd/MM/yyyy") às @post.CreatedAt.ToString("HH:mm")h
                 </span>
-                <span class="subtitle">
-                    <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                    @post.CreatedAt.ToString("HH:mm")h
-                </span>
+                @if (post.LastUpdateAt != null)
+                {
+                    <span class="subtitle">
+                        <i>Atualizado em  @post.LastUpdateAt.ToString("dd/MM/yyyy") às @post.LastUpdateAt.ToString("HH:mm")h</i>
+                    </span>
+                }
                 <span class="subtitle">
                     <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                     <a href="@Url.Action("Show","Post", new { id = post.Id })#comments" title="Ir para comentários">
@@ -39,9 +41,10 @@ else // Se encontrou postagem, lista-as
                     </a>
                 </span>
             </div>
-            <div class="content">
+            <div class="content post">
                 @Html.Raw(@post.Content)
             </div><!-- /.content -->
+            <div class="clearfix separator-bottom"></div>
         </div><!-- /.jumbotron -->
     }
 }
