Adição do componente PagedList/PagedList.Mvc

--- a/Blog42/Views/Post/Preview.cshtml
+++ b/Blog42/Views/Post/Preview.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewBag.Title = ViewBag.Post.Title;
+    ViewBag.Title = ViewBag.Post.Title+" [preview]";
 }
-
 
 <div id="thisPreview"> ISTO É UMA PRÉ VISUALIZAÇÃO</div>
 <div class="jumbotron">
