--- a/Blog42/Views/Comment/All.cshtml
+++ b/Blog42/Views/Comment/All.cshtml
@@ -1,11 +1,13 @@
-﻿@{
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<Blog42.Models.Comment>
+@{
     ViewBag.Title = "Comentários";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; // Layout para páginas do painel de controle administrativo
 }
 
 <table class="table table-striped grid-table">
 
-    @if (ViewBag.Comments.Count == 0)
+    @if (Model.Count == 0)
     { // Se não encontrou registros
         <thead>
             <tr>
@@ -26,7 +28,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var comment in ViewBag.Comments)
+            @foreach (var comment in Model)
             {
                 <tr>
                     <td><b class="th">Postagem:</b> @comment.Post.Title</td>
@@ -44,3 +46,12 @@
         </tbody>
     }
 </table>
+
+@if (Model.HasNextPage || Model.HasPreviousPage) // Insere paginação
+{
+    <div class="row pagination-panel-control">
+        <div class="col-md-12 center">
+            @Html.PagedListPager(Model, (page) => Url.Action("All", new { page = page }), PagedListRenderOptions.OnlyShowFivePagesAtATime)
+        </div>
+    </div>
+}
