--- a/Blog42/Views/Shared/_Layout.cshtml
+++ b/Blog42/Views/Shared/_Layout.cshtml
@@ -3,53 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title - Blog 42</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        <meta author="Thiago Barradas" />
-        @Styles.Render("~/Content/bootstrap.min.css")
-        @Styles.Render("~/Content/custom.css")
-        @Scripts.Render("~/bundles/modernizr")
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/jqueryui")
-        @Scripts.Render("~/Scripts/bootstrap.min.js")
-        @Scripts.Render("~/Scripts/bootbox.min.js")
+        @Html.Partial("_ContentHead")
     </head>
     <body>
-
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-
-                    <!-- Menu responsivo -->
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Navegação pelo menu</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-
-                    @Html.ActionLink("Blog 42", "Index", "Home", null, new { @class = "logo" })
-                </div>
-                
-                <!-- menu principal -->
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
-                        <li>@Html.ActionLink("Contato", "Contato", "Home")</li>
-                    </ul>
-                </div><!-- /navbar -->
-            </div>
-        </nav>
+        @Html.Partial("_ContentTop")
 
         <div class="container">
             @RenderBody()      
         </div> <!-- /container -->
 
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Blog 42. @Html.ActionLink("Administração do Blog","Login","User").</p> 
-        </footer>
-
-         @RenderSection("scripts", required: false)
+        @Html.Partial("_ContentBottom")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
