Inclusão de Paginação no painel administrativo para Usuários

--- a/Blog42/Views/Shared/Error.cshtml
+++ b/Blog42/Views/Shared/Error.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="div-error">
-        <div id="img-error"></div>
+        <div id="img-error" onclick="location.href='@Url.Action("Index","Home")'"></div>
     </div>
 </body>
 </html>
