--- a/Blog42/Views/Post/Preview.cshtml
+++ b/Blog42/Views/Post/Preview.cshtml
@@ -44,8 +44,9 @@
         </div>
 
         <script>
-            // Remove links da página
+            // Remove links da página e funções de formulário
             $('a').click(function () { return false; });
+            $('form').submit(function () { return false; });
         </script>    
     
 
